# FastMCP

./: 00_EMPIEZA_AQUI.md  ENTREGA_FINAL.md  INICIO_RAPIDO.md  INVENTARIO.md  MAPA_COMPLETO.md  PLAN_APRENDIZAJE.md  QUE_HACER_HOY.md  README.md  REFERENCIA_RAPIDA.md  RESUMEN_DIA1-3.md  RESUMEN_VISUAL.md  START_HERE.md  client.py  main.py  my_server.py  pyproject.toml
01_fundamentos/: 01_hola_mundo.py  02_conceptos.py  03_tipos_de_datos.py  README.md
02_componentes/: 01_tools_simples.py  02_tools_complejas.py  03_resources.py  04_prompts.py  README.md
