[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fastmcp-learning"
version = "0.1.0"
description = "Curso completo de FastMCP"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=3.0.0b1",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]  # o el nombre de tu carpeta con código